@@ -11,6 +11,9 @@ Revision history for Test-BrewBuild
         - added LWP::Simple for #142 (check if clone URL exists)
         - added check in Git::clone() to ensure that the remote repo exists
           before we attempt a clone, and croak() if not (fixes #142)
+        - added logging to all methods in Git, updated POD, and all locations
+          that initiate a new Git object send in their own debug level 
+          (closes #166)
 
 2.11    2017-03-26
         - we now filter out cperls until we can do further testing. This is
